--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Test</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            height: 100vh;
+            background-color: #111;
+            background-image: linear-gradient(45deg, #bbdefb, #1976d2, #1a237e);
+            background-blend-mode: exclusion;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        @keyframes bg-anim {
+            0% {
+                background-position: 0 0;
+            }
+
+            100% {
+                background-position: 100% 100%;
+            }
+        }
+
+        body:before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 0;
+            background-color: transparent;
+            background-image: url(./motif-grid.svg) !important;
+            background-size: 100px;
+            background-repeat: repeat;
+            -webkit-animation: bg-anim 100s linear infinite;
+            animation: bg-anim 100s linear infinite;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Loading</h1>
+
+    <svg width="70" height="70" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" stroke="#fff">
+        <g fill="none" fill-rule="evenodd" stroke-width="2">
+            <circle cx="22" cy="22" r="1">
+                <animate attributeName="r" begin="0s" dur="1.8s" values="1; 20" calcMode="spline" keyTimes="0; 1"
+                    keySplines="0.165, 0.84, 0.44, 1" repeatCount="indefinite" />
+                <animate attributeName="stroke-opacity" begin="0s" dur="1.8s" values="1; 0" calcMode="spline"
+                    keyTimes="0; 1" keySplines="0.3, 0.61, 0.355, 1" repeatCount="indefinite" />
+            </circle>
+            <circle cx="22" cy="22" r="1">
+                <animate attributeName="r" begin="-0.9s" dur="1.8s" values="1; 20" calcMode="spline" keyTimes="0; 1"
+                    keySplines="0.165, 0.84, 0.44, 1" repeatCount="indefinite" />
+                <animate attributeName="stroke-opacity" begin="-0.9s" dur="1.8s" values="1; 0" calcMode="spline"
+                    keyTimes="0; 1" keySplines="0.3, 0.61, 0.355, 1" repeatCount="indefinite" />
+            </circle>
+        </g>
+    </svg>
 </body>
+
 </html>
